--- a/_posts/2014-11-17-webapp.md
+++ b/_posts/2014-11-17-webapp.md
@@ -1,10 +1,12 @@
 ---
 layout: post
-title: Quickstart your web dev environment
+title: Quickstart your webapp
 description: "A fast and convenient way to get started with developing your next awesome web project."
-modified: 2014-10-26
 category: articles
-tags: [yeoman web]
+tags: [yeoman, bower, grunt, bootstrap]
+image:
+  feature: articles/webapp/yeoman.jpg
+  credit: http://addyosmani.com
 ---
 
 There are myriads of [JavaScript frameworks](https://github.com/showcases/front-end-javascript-frameworks) and [libraries](http://microjs.com/) out there, and as every ambitious web developer eager for knowledge to soak up, you want to test them all.
@@ -20,9 +22,14 @@ What we need is a fast and convenient way to get started. We want a basic websit
 >
 > To do so, we provide a generator ecosystem. A generator is basically a plugin that can be run with the `yo` command to scaffold complete projects or useful parts.
 
-So basically we'll use [Yeoman](http://yeoman.io/) to bootstrap our environment with the features implemented by one of its generators.
+So basically we'll use __Yeoman__ to bootstrap our environment with the features implemented by one of its generators. The rest (e.g. third-party dependencies) is the domain of __Bower__ and __Grunt__.
 
-Yeoman is distributed via the Node.js package manager `npm`, so step 0 is to [set up npm first](http://thechangelog.com/install-node-js-with-homebrew-on-os-x/). Then, the [Yeoman setup](http://yeoman.io/learning/) is simply:
+<figure>
+  <a href="{{site.url}}/images/articles/webapp/yeoman-workflow.jpg"><img src="{{site.url}}/images/articles/webapp/yeoman-workflow.jpg"></a>
+  <figcaption><a href="http://yeoman.io/learning/" title="The Yeoman Workflow">Each of these projects are independently maintained by their respective communities, but work well together as a part of a prescriptive workflow for keeping you effective -- yeoman.io</a>.</figcaption>
+</figure>
+
+[Yeoman](http://yeoman.io/) is distributed via the Node.js package manager `npm`, so step 0 is to [set up npm first](http://thechangelog.com/install-node-js-with-homebrew-on-os-x/). Then, the [Yeoman setup](http://yeoman.io/learning/) is simply:
 
 {% highlight bash %}
 # The  --global argument will cause npm to install the package globally
@@ -64,7 +71,7 @@ To get started, we install the generator and invoke it with `yo`:
 yo webapp --coffee
 {% endhighlight %}
 
-The friendly generator includes [HTML5 Boilerplate](http://html5boilerplate.com), [jQuery](https://jquery.com) and a [Gruntfile](http://gruntjs.com/sample-gruntfile). Additionally, we opt to include Sass in the menu. After the intimidatingly long list of components has been installed, we can look at the result.
+[The friendly generator](https://github.com/yeoman/generator-webapp/blob/master/readme.md) includes [HTML5 Boilerplate](http://html5boilerplate.com), [jQuery](https://jquery.com) and a [Gruntfile](http://gruntjs.com/sample-gruntfile). Additionally, we opt to include Sass in the menu. After the intimidatingly long list of components has been installed, we can look at the result.
 
 Fire up the webapp with:
 
@@ -72,25 +79,23 @@ Fire up the webapp with:
 grunt serve
 {% endhighlight %}
 
-Your default browser should open Yeoman's welcome page (*'Allo, 'Allo!*), always up to date thanks to Livereload. The browser console should show `'Allo from CoffeeScript!`. If you get a Ruby Sass error, install the missing gem with `gem install sass`.
+Your default browser should open Yeoman's welcome page (*'Allo, 'Allo!*), always up to date thanks to LiveReload. The browser console should show `'Allo from CoffeeScript!`. If you get a Ruby Sass error, install the missing gem with `gem install sass`.
 
 ## Webapp structure
 
 The files of our webapp are neatly structured in the `app/` directory.
 
-{% highlight %}
-▾ app/
-  ▾ images/
-  ▾ scripts/
-      main.js
-  ▾ styles/
-      main.scss
-    favicon.ico
-    index.html
-    robots.txt
-{% endhighlight %}
+    ▾ app/
+      ▾ images/
+      ▾ scripts/
+          main.js
+      ▾ styles/
+          main.scss
+        favicon.ico
+        index.html
+        robots.txt
 
-Go ahead, open `app/index.hml` and change the `<h1>` gretting. Saving the file should result in an immediate update in the browser, thanks to the Grunt watch task.
+Go ahead, open `app/index.hml` and change the `<h1>` gretting. Saving the file should result in an immediate update in the browser.
 
 
 ## Third-Party Dependencies
@@ -136,6 +141,7 @@ grunt wiredep
 {% endhighlight %}
 
 `bower list` shows the dependencies it currently knows of:
+
 {% highlight bash %}
 marka /Users/sven/Code/marka
 ├─┬ bootstrap#3.2.0 (latest is 3.3.1)
@@ -175,14 +181,17 @@ $(document).ready(function() {
 
 To make the `jshint` task happy, I included the following in `.jshintrc`:
 
-{% highlight html %}
+{% highlight js %}
   ...
   "globals" : {
     "Marka": false
   }
 {% endhighlight %}
 
-
+<figure>
+  <a href="{{site.url}}/images/articles/webapp/marka-screenshot.png"><img src="{{site.url}}/images/articles/webapp/marka-screenshot.png"></a>
+  <figcaption>The Marka icon inserted into the bootstrapped site, ready for more awesome stuff.</figcaption>
+</figure>
 
 ## Conclusion
 
@@ -194,4 +203,10 @@ This article showed a quick way how to bootstrap a modern web app. Some highligh
 
 And this is far from all. Lot's of grunt tasks we didn't even talk about (image optimization, file compression, ...) and other goodies however deserve another article.
 
-Happy bootstrapping!
+*Happy bootstrapping!*
+
+
+## Further resources
+
+- [Tutorial](http://yeoman.io/codelab.html): build a simple todo app with Yeoman
+- [Video: Getting started with Yeoman and generator-webapp](https://www.youtube.com/watch?v=zBt2g9ekiug) by the awesome Addy Osmani
